Visual updates: Switch to Poppins font, squarish borders, sharp team images

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fontsource/dotgothic16": "^5.2.8",
     "@fontsource/inter": "^5.2.8",
     "@fontsource/montserrat": "^5.2.8",
+    "@fontsource/outfit": "^5.2.8",
+    "@fontsource/poppins": "^5.2.7",
     "@fontsource/share-tech-mono": "^5.2.7",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.344.0",
